--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,13 @@ repositories {
 
 dependencies {
     // testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
-    // testImplementation 'org.testng:testng:7.1.0'
+    testImplementation 'org.testng:testng:7.1.0'
+    testImplementation 'org.testng:testng:7.1.0'
     // testImplementation 'junit:junit:4.13'
 }
 
 test {
     // useJUnitPlatform()
-    // useTestNG()
+    useTestNG()
     // useJUnit()
 }
